--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@ local-config.php
 .DS_Store
 /content/upgrade
 /content/uploads
+
+/shop
+
+/content/plugins/ultimate-branding
+
+/content/plugins/wordpress-importer
+
+/content/plugins/regenerate-thumbnails
