Ignore SHOP Content plus commit theme

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,27 @@ local-config.php
 /content/upgrade
 /content/uploads
 
-/shop
-
 /content/plugins/ultimate-branding
-
 /content/plugins/wordpress-importer
-
 /content/plugins/regenerate-thumbnails
+
+/shop/assets
+/shop/config
+/shop/core
+/shop/css
+/shop/custom
+/shop/images
+/shop/runtime
+
+/shop/.htaccess
+/shop/_index.php
+/shop/htaccess
+/shop/index.php
+/shop/install.php
+/shop/php.ini
+/shop/robots.txt
+
+/shop/themes/brooklyn
+/shop/themes/brooklyn-copy
+/shop/themes/portland
+/shop/upgrade
